--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "scroll2section",
   "version": "1.0.0",
-  "description": "jQuery plugin to scroll to section from menu",
-  "homepage": "https://github.com/kiaonline/scroll2Section",
+  "description": "jQuery plugin to scroll page",
+  "homepage": "https://github.com/rafaelcneves/scroll2Section",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kiaonline/scroll2Section.git"
+    "url": "git+https://github.com/rafaelcneves/scroll2Section.git"
   },
   "keywords": [
     "section",
@@ -16,32 +17,10 @@
     "menu",
     "scroll"
   ],
-  "author": "kiaonline",
+  "author": "rafaelcneves",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "browser-sync": "^2.18.6",
-    "browserify": "^13.3.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cached": "^1.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-concat-util": "^0.5.5",
-    "gulp-header": "^1.8.9",
-    "gulp-jshint": "^2.0.4",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-watch": "^4.3.11",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1",
-    "map-stream": "0.0.7",
-    "uglify-js-harmony": "^2.6.2"
-  },
-  "main": "gulpfile.js",
-  "directories": {
-    "example": "example"
-  },
-  "dependencies": {}
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
